--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "grapesjs": "^0.16.3",
+    "grapesjs-aviary": "^0.1.2",
+    "grapesjs-blocks-basic": "^0.1.8",
+    "grapesjs-component-countdown": "^0.1.3",
+    "grapesjs-navbar": "^0.1.5",
+    "grapesjs-plugin-export": "^1.0.7",
+    "grapesjs-plugin-filestack": "^0.1.1",
+    "grapesjs-plugin-forms": "^1.0.5",
     "vue": "^2.6.11",
     "vue-sidebar-menu": "^4.5.3",
     "vuex": "^3.1.3"
